Remove Joules and do ana initial pass at removing strict energy and moving to Neo's energy handlers